.baker/manifests/fusion-app/dev-manual-deployment/cognitedata-development.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: fusion-app-staging-frontend-config
  labels:
    app: fusion-app-http-container
    service: fusion-ui
    team: cdf-ux
  name: fusion-app-staging-ingress
  namespace: apps-staging
spec:
  rules:
  - host: '*.fusion.cognitedata-development.cognite.ai'
    http:
      paths:
      - backend:
          service:
            name: fusion-app-staging
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: fusion.cognitedata-development.cognite.ai
    http:
      paths:
      - backend:
          service:
            name: fusion-app-staging
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - '*.fusion.cognitedata-development.cognite.ai'
    - fusion.cognitedata-development.cognite.ai
    secretName: fusion-app-staging-cert-secret
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"http":"fusion-app-staging-backend-config"},
      "default" : "fusion-app-staging-backend-config"}'
    strategy.spinnaker.io/use-source-capacity: "true"
  labels:
    app: fusion-app-http-container
    service: fusion-ui
    team: cdf-ux
  name: fusion-app-staging
  namespace: apps-staging
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: fusion-app-staging
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    strategy.spinnaker.io/use-source-capacity: "true"
  labels:
    app: fusion-app-http-container
    service: fusion-ui
    team: cdf-ux
  name: fusion-app-staging
  namespace: apps-staging
spec:
  minReadySeconds: 0
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: fusion-app-staging
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: fusion-app-staging
        service: fusion-ui
        team: cdf-ux
    spec:
      containers:
      - image: eu.gcr.io/cognitedata-development/fusion-app/dev:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 5
        name: fusion-app-staging
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8000
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: nginx.config
      volumes:
      - configMap:
          name: nginx-config-file-map
        name: nginx-config
